--- a/src/stylesheets/vizz.css
+++ b/src/stylesheets/vizz.css
@@ -13,8 +13,9 @@
     grid-template-columns: 1fr 2fr;
     max-height: 250px;
     min-width: fit-content;
+    max-width: 100%;
     margin-top: 1em;
-    overflow-x: visible;
+    overflow-x: hidden;
     column-gap: 1px;
     color: white;
 }
